// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not render address summary when shippingAsBilling is false 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <PaymentMethod
    checkout={
      Object {
        "billingAddress": Object {
          "collapsed": false,
          "completed": false,
          "errors": Object {},
        },
        "paymentMethod": Object {
          "collapsed": false,
          "completed": false,
          "selectedMethod": "card",
        },
        "shippingAddress": Object {
          "city": "Test City",
          "collapsed": true,
          "completed": true,
          "errors": Object {},
          "first_name": "Test First Name",
          "last_name": "Test Last Name",
          "line_1": "Test Address 1",
          "line_2": "Test Address 2",
          "zipcode": "Test Postcode",
        },
        "shippingAddressAsBillingAddress": false,
        "shippingMethod": Object {
          "collapsed": true,
          "completed": true,
        },
      }
    }
    order={
      Object {
        "cardErrors": false,
        "cardTokenRequested": false,
      }
    }
    setShippingBillingAddress={[Function]}
  >
    <div
      aria-label="Payment method"
      className="o-form  c-payment-method"
    >
      <div
        className="o-form__header  c-payment-method__header"
      >
        <div>
          <h2>
            Payment Method
          </h2>
        </div>
        <div />
      </div>
      <div
        className="c-payment-method__section"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <PaymentMethodSelector
          currentMethod="card"
        >
          <div
            className="o-form c-payment-method"
          >
            <div
              className="c-payment-method__button-group"
            >
              <t
                aria-label="Use credit or debit card"
                className="c-payment-method__button c-payment-method__button--active"
                label="Credit/Debit Card"
                onClick={[Function]}
              >
                <button
                  aria-label="Use credit or debit card"
                  className="c-payment-method__button c-payment-method__button--active o-button"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  Credit/Debit Card
                </button>
              </t>
              <t
                aria-label="Use paypal"
                className="c-payment-method__button "
                label="PayPal"
                onClick={[Function]}
              >
                <button
                  aria-label="Use paypal"
                  className="c-payment-method__button  o-button"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  PayPal
                </button>
              </t>
            </div>
            <div
              className="c-payment-method__images"
            >
              <span
                className="c-payment-method__images-cardpayment"
              >
                <t
                  src="/static/payments/visa.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/visa.svg"
                        srcSet="/static/payments/visa.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/mastercard.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/mastercard.svg"
                        srcSet="/static/payments/mastercard.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/american-express.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/american-express.svg"
                        srcSet="/static/payments/american-express.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/maestro.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/maestro.svg"
                        srcSet="/static/payments/maestro.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
              </span>
              <span
                className="c-payment-method__images-paypal"
              >
                <t
                  src="/static/payments/pay-pal.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/pay-pal.svg"
                        srcSet="/static/payments/pay-pal.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
              </span>
            </div>
          </div>
        </PaymentMethodSelector>
        <StripePayment
          checkout={
            Object {
              "billingAddress": Object {
                "collapsed": false,
                "completed": false,
                "errors": Object {},
              },
              "paymentMethod": Object {
                "collapsed": false,
                "completed": false,
                "selectedMethod": "card",
              },
              "shippingAddress": Object {
                "city": "Test City",
                "collapsed": true,
                "completed": true,
                "errors": Object {},
                "first_name": "Test First Name",
                "last_name": "Test Last Name",
                "line_1": "Test Address 1",
                "line_2": "Test Address 2",
                "zipcode": "Test Postcode",
              },
              "shippingAddressAsBillingAddress": false,
              "shippingMethod": Object {
                "collapsed": true,
                "completed": true,
              },
            }
          }
          order={
            Object {
              "cardErrors": false,
              "cardTokenRequested": false,
            }
          }
          setShippingBillingAddress={[Function]}
        >
          <div>
            <div
              className="o-form__background"
            >
              <div
                className="o-form__wrapper"
              >
                <Component
                  cardTokenRequested={false}
                  checkout={
                    Object {
                      "billingAddress": Object {
                        "collapsed": false,
                        "completed": false,
                        "errors": Object {},
                      },
                      "paymentMethod": Object {
                        "collapsed": false,
                        "completed": false,
                        "selectedMethod": "card",
                      },
                      "shippingAddress": Object {
                        "city": "Test City",
                        "collapsed": true,
                        "completed": true,
                        "errors": Object {},
                        "first_name": "Test First Name",
                        "last_name": "Test Last Name",
                        "line_1": "Test Address 1",
                        "line_2": "Test Address 2",
                        "zipcode": "Test Postcode",
                      },
                      "shippingAddressAsBillingAddress": false,
                      "shippingMethod": Object {
                        "collapsed": true,
                        "completed": true,
                      },
                    }
                  }
                >
                  <p>
                    Mocked Card Fields
                  </p>
                </Component>
                <div
                  className="o-form__input-group"
                >
                  <label>
                    Billing address *
                  </label>
                </div>
                <n
                  checked={false}
                  label="Same as shipping address"
                  name="shippingAddressAsBillingAddress"
                  type="checkbox"
                >
                  <t
                    checked={false}
                    label="Same as shipping address"
                    name="shippingAddressAsBillingAddress"
                    renderValidationMessage={[Function]}
                    type="checkbox"
                  >
                    <div
                      className="o-form__input-group"
                    >
                      <label
                        className="o-form__label"
                        htmlFor="shippingAddressAsBillingAddress"
                      >
                        <input
                          checked={false}
                          className="o-form__checkbox"
                          id="shippingAddressAsBillingAddress"
                          name="shippingAddressAsBillingAddress"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="o-form__checkbox-caption"
                        >
                          Same as shipping address
                           
                        </span>
                      </label>
                    </div>
                  </t>
                </n>
              </div>
            </div>
            <Connect(AddressForm)
              addressType="billing"
              aria-label="Billing address form"
              checkout={
                Object {
                  "billingAddress": Object {
                    "collapsed": false,
                    "completed": false,
                    "errors": Object {},
                  },
                  "paymentMethod": Object {
                    "collapsed": false,
                    "completed": false,
                    "selectedMethod": "card",
                  },
                  "shippingAddress": Object {
                    "city": "Test City",
                    "collapsed": true,
                    "completed": true,
                    "errors": Object {},
                    "first_name": "Test First Name",
                    "last_name": "Test Last Name",
                    "line_1": "Test Address 1",
                    "line_2": "Test Address 2",
                    "zipcode": "Test Postcode",
                  },
                  "shippingAddressAsBillingAddress": false,
                  "shippingMethod": Object {
                    "collapsed": true,
                    "completed": true,
                  },
                }
              }
              className="o-form__billing"
              formName="billingAddress"
              title="Billing Address"
            >
              <AddressForm
                addressBook={Array []}
                addressType="billing"
                aria-label="Billing address form"
                checkout={
                  Object {
                    "billingAddress": Object {
                      "collapsed": false,
                      "completed": false,
                      "errors": Object {},
                    },
                    "paymentMethod": Object {
                      "collapsed": false,
                      "completed": false,
                      "selectedMethod": "card",
                    },
                    "shippingAddress": Object {
                      "city": "Test City",
                      "collapsed": true,
                      "completed": true,
                      "errors": Object {},
                      "first_name": "Test First Name",
                      "last_name": "Test Last Name",
                      "line_1": "Test Address 1",
                      "line_2": "Test Address 2",
                      "zipcode": "Test Postcode",
                    },
                    "shippingAddressAsBillingAddress": false,
                    "shippingMethod": Object {
                      "collapsed": true,
                      "completed": true,
                    },
                  }
                }
                className="o-form__billing"
                dispatch={[Function]}
                formName="billingAddress"
                loggedIn={false}
                title="Billing Address"
              >
                <div
                  className="o-form__address o-form__billing"
                >
                  <div
                    className="o-form__header c-address-form__header"
                  >
                    <div
                      className="o-form__header-title c-address-form__header-title"
                    >
                      <h2>
                        Billing Address
                      </h2>
                    </div>
                  </div>
                  <form
                    className="o-form__wrapper o-form__background"
                  >
                    <n
                      formName="billingAddress"
                      label="Country"
                      name="country_code"
                      options={
                        Array [
                          Object {
                            "id": 1,
                            "title": "United Kingdom",
                            "value": "GB",
                          },
                          Object {
                            "id": 2,
                            "title": "United States",
                            "value": "US",
                          },
                        ]
                      }
                      prompt="Select a Country"
                      required={true}
                      rules={
                        Object {
                          "required": true,
                        }
                      }
                    >
                      <t
                        formName="billingAddress"
                        label="Country"
                        name="country_code"
                        options={
                          Array [
                            Object {
                              "id": 1,
                              "title": "United Kingdom",
                              "value": "GB",
                            },
                            Object {
                              "id": 2,
                              "title": "United States",
                              "value": "US",
                            },
                          ]
                        }
                        prompt="Select a Country"
                        renderValidationMessage={[Function]}
                        required={true}
                        rules={
                          Object {
                            "required": true,
                          }
                        }
                      >
                        <div
                          className="o-form__input-group"
                        >
                          <label
                            className="o-form__label"
                            htmlFor="country_code"
                          >
                            <b>
                              Country
                               *
                            </b>
                          </label>
                          <select
                            className="o-form__input-block o-form__input-field"
                            id="country_code"
                            name="country_code"
                            onBlur={[Function]}
                            onChange={[Function]}
                            required={true}
                            role="listbox"
                          >
                            <option
                              aria-posinset="0"
                              aria-setsize={2}
                              role="option"
                              value=""
                            >
                              Select a Country
                            </option>
                            <option
                              aria-posinset={1}
                              aria-setsize={2}
                              key="0"
                              role="option"
                              value="GB"
                            >
                              United Kingdom
                            </option>
                            <option
                              aria-posinset={2}
                              aria-setsize={2}
                              key="1"
                              role="option"
                              value="US"
                            >
                              United States
                            </option>
                          </select>
                        </div>
                      </t>
                    </n>
                    <div
                      className="o-flex o-flex__space-between"
                    >
                      <div
                        className="o-flex-full-width-s"
                        key="0"
                      >
                        <n
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="First Name"
                          name="first_name"
                          placeholder="Enter First Name"
                          required={true}
                          rules={
                            Object {
                              "maxLength": 50,
                              "required": true,
                            }
                          }
                        >
                          <t
                            className="o-form__input-block"
                            formName="billingAddress"
                            label="First Name"
                            name="first_name"
                            placeholder="Enter First Name"
                            renderValidationMessage={[Function]}
                            required={true}
                            rules={
                              Object {
                                "maxLength": 50,
                                "required": true,
                              }
                            }
                          >
                            <div
                              className="o-form__input-group"
                            >
                              <label
                                className="o-form__label"
                                htmlFor="first_name"
                              >
                                <b>
                                  First Name
                                   
                                   *
                                </b>
                                <input
                                  checked={false}
                                  className="o-form__input-field o-form__input-block"
                                  id="first_name"
                                  name="first_name"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  placeholder="Enter First Name"
                                  required={true}
                                />
                              </label>
                            </div>
                          </t>
                        </n>
                      </div>
                      <div
                        className="o-flex-full-width-s"
                        key="1"
                      >
                        <n
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="Last Name"
                          name="last_name"
                          placeholder="Enter Last Name"
                          required={true}
                          rules={
                            Object {
                              "maxLength": 50,
                              "required": true,
                            }
                          }
                        >
                          <t
                            className="o-form__input-block"
                            formName="billingAddress"
                            label="Last Name"
                            name="last_name"
                            placeholder="Enter Last Name"
                            renderValidationMessage={[Function]}
                            required={true}
                            rules={
                              Object {
                                "maxLength": 50,
                                "required": true,
                              }
                            }
                          >
                            <div
                              className="o-form__input-group"
                            >
                              <label
                                className="o-form__label"
                                htmlFor="last_name"
                              >
                                <b>
                                  Last Name
                                   
                                   *
                                </b>
                                <input
                                  checked={false}
                                  className="o-form__input-field o-form__input-block"
                                  id="last_name"
                                  name="last_name"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  placeholder="Enter Last Name"
                                  required={true}
                                />
                              </label>
                            </div>
                          </t>
                        </n>
                      </div>
                    </div>
                    <a
                      href="#"
                      onClick={[Function]}
                    >
                      <p>
                        + Add Company Name (optional)
                      </p>
                    </a>
                    <n
                      className="o-form__input-block"
                      formName="billingAddress"
                      label="Address 1"
                      name="line_1"
                      placeholder="Enter Address"
                      required={true}
                      rules={
                        Object {
                          "required": true,
                        }
                      }
                    >
                      <t
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Address 1"
                        name="line_1"
                        placeholder="Enter Address"
                        renderValidationMessage={[Function]}
                        required={true}
                        rules={
                          Object {
                            "required": true,
                          }
                        }
                      >
                        <div
                          className="o-form__input-group"
                        >
                          <label
                            className="o-form__label"
                            htmlFor="line_1"
                          >
                            <b>
                              Address 1
                               
                               *
                            </b>
                            <input
                              checked={false}
                              className="o-form__input-field o-form__input-block"
                              id="line_1"
                              name="line_1"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder="Enter Address"
                              required={true}
                            />
                          </label>
                        </div>
                      </t>
                    </n>
                    <a
                      href="#"
                      onClick={[Function]}
                    >
                      <p>
                        + Add Address 2 (optional)
                      </p>
                    </a>
                    <div
                      key="0"
                    >
                      <n
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Post Code"
                        name="zipcode"
                        placeholder="Enter Post Code"
                        required={true}
                        rules={
                          Object {
                            "postcode": true,
                            "required": true,
                          }
                        }
                      >
                        <t
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="Post Code"
                          name="zipcode"
                          placeholder="Enter Post Code"
                          renderValidationMessage={[Function]}
                          required={true}
                          rules={
                            Object {
                              "postcode": true,
                              "required": true,
                            }
                          }
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <label
                              className="o-form__label"
                              htmlFor="zipcode"
                            >
                              <b>
                                Post Code
                                 
                                 *
                              </b>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="zipcode"
                                name="zipcode"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Enter Post Code"
                                required={true}
                              />
                            </label>
                          </div>
                        </t>
                      </n>
                    </div>
                    <div
                      key="1"
                    >
                      <n
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="City"
                        name="city"
                        placeholder="Enter City"
                        required={true}
                        rules={
                          Object {
                            "required": true,
                          }
                        }
                      >
                        <t
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="City"
                          name="city"
                          placeholder="Enter City"
                          renderValidationMessage={[Function]}
                          required={true}
                          rules={
                            Object {
                              "required": true,
                            }
                          }
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <label
                              className="o-form__label"
                              htmlFor="city"
                            >
                              <b>
                                City
                                 
                                 *
                              </b>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="city"
                                name="city"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Enter City"
                                required={true}
                              />
                            </label>
                          </div>
                        </t>
                      </n>
                    </div>
                    <div
                      key="2"
                    >
                      <n
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="County"
                        name="state"
                        placeholder="Enter County"
                      >
                        <t
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="County"
                          name="state"
                          placeholder="Enter County"
                          renderValidationMessage={[Function]}
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <label
                              className="o-form__label"
                              htmlFor="state"
                            >
                              <b>
                                County
                                 
                              </b>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="state"
                                name="state"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Enter County"
                              />
                            </label>
                          </div>
                        </t>
                      </n>
                    </div>
                    <p
                      className="o-form__additional-label"
                    >
                      Required for any delivery related questions
                    </p>
                    <n
                      className="o-form__input-block"
                      formName="billingAddress"
                      label="Phone"
                      name="primary_phone"
                      placeholder="Enter Phone"
                      required={true}
                      rules={
                        Object {
                          "phone": true,
                          "required": true,
                        }
                      }
                    >
                      <t
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Phone"
                        name="primary_phone"
                        placeholder="Enter Phone"
                        renderValidationMessage={[Function]}
                        required={true}
                        rules={
                          Object {
                            "phone": true,
                            "required": true,
                          }
                        }
                      >
                        <div
                          className="o-form__input-group"
                        >
                          <label
                            className="o-form__label"
                            htmlFor="primary_phone"
                          >
                            <b>
                              Phone
                               
                               *
                            </b>
                            <input
                              checked={false}
                              className="o-form__input-field o-form__input-block"
                              id="primary_phone"
                              name="primary_phone"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder="Enter Phone"
                              required={true}
                            />
                          </label>
                        </div>
                      </t>
                    </n>
                    <p
                      className="o-form__additional-label"
                    >
                      Required for Order Confirmation Email
                    </p>
                    <n
                      className="o-form__input-block"
                      formName="billingAddress"
                      label="Email"
                      name="email"
                      placeholder="Enter Email"
                      required={true}
                      rules={
                        Object {
                          "email": true,
                          "required": true,
                        }
                      }
                      type="email"
                    >
                      <t
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Email"
                        name="email"
                        placeholder="Enter Email"
                        renderValidationMessage={[Function]}
                        required={true}
                        rules={
                          Object {
                            "email": true,
                            "required": true,
                          }
                        }
                        type="email"
                      >
                        <div
                          className="o-form__input-group"
                        >
                          <label
                            className="o-form__label"
                            htmlFor="email"
                          >
                            <b>
                              Email
                               
                               *
                            </b>
                            <input
                              checked={false}
                              className="o-form__input-field o-form__input-block"
                              id="email"
                              name="email"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder="Enter Email"
                              required={true}
                              type="email"
                            />
                          </label>
                        </div>
                      </t>
                    </n>
                    <p>
                      * Denotes required fields
                    </p>
                  </form>
                </div>
              </AddressForm>
            </Connect(AddressForm)>
          </div>
        </StripePayment>
      </div>
    </div>
  </PaymentMethod>
</Provider>
`;

exports[`Renders correct address summary when shippingAsBilling is true 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <PaymentMethod
    checkout={
      Object {
        "billingAddress": Object {},
        "paymentMethod": Object {
          "collapsed": false,
          "completed": false,
          "selectedMethod": "card",
        },
        "shippingAddress": Object {
          "city": "Test City",
          "collapsed": true,
          "completed": true,
          "errors": Object {},
          "first_name": "Test First Name",
          "last_name": "Test Last Name",
          "line_1": "Test Address 1",
          "line_2": "Test Address 2",
          "zipcode": "Test Postcode",
        },
        "shippingAddressAsBillingAddress": true,
        "shippingMethod": Object {
          "collapsed": true,
          "completed": true,
        },
      }
    }
    order={
      Object {
        "cardTokenRequested": false,
      }
    }
    setShippingBillingAddress={[Function]}
  >
    <div
      aria-label="Payment method"
      className="o-form  c-payment-method"
    >
      <div
        className="o-form__header  c-payment-method__header"
      >
        <div>
          <h2>
            Payment Method
          </h2>
        </div>
        <div />
      </div>
      <div
        className="c-payment-method__section"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <PaymentMethodSelector
          currentMethod="card"
        >
          <div
            className="o-form c-payment-method"
          >
            <div
              className="c-payment-method__button-group"
            >
              <t
                aria-label="Use credit or debit card"
                className="c-payment-method__button c-payment-method__button--active"
                label="Credit/Debit Card"
                onClick={[Function]}
              >
                <button
                  aria-label="Use credit or debit card"
                  className="c-payment-method__button c-payment-method__button--active o-button"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  Credit/Debit Card
                </button>
              </t>
              <t
                aria-label="Use paypal"
                className="c-payment-method__button "
                label="PayPal"
                onClick={[Function]}
              >
                <button
                  aria-label="Use paypal"
                  className="c-payment-method__button  o-button"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  PayPal
                </button>
              </t>
            </div>
            <div
              className="c-payment-method__images"
            >
              <span
                className="c-payment-method__images-cardpayment"
              >
                <t
                  src="/static/payments/visa.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/visa.svg"
                        srcSet="/static/payments/visa.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/mastercard.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/mastercard.svg"
                        srcSet="/static/payments/mastercard.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/american-express.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/american-express.svg"
                        srcSet="/static/payments/american-express.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/maestro.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/maestro.svg"
                        srcSet="/static/payments/maestro.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
              </span>
              <span
                className="c-payment-method__images-paypal"
              >
                <t
                  src="/static/payments/pay-pal.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/pay-pal.svg"
                        srcSet="/static/payments/pay-pal.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
              </span>
            </div>
          </div>
        </PaymentMethodSelector>
        <StripePayment
          checkout={
            Object {
              "billingAddress": Object {},
              "paymentMethod": Object {
                "collapsed": false,
                "completed": false,
                "selectedMethod": "card",
              },
              "shippingAddress": Object {
                "city": "Test City",
                "collapsed": true,
                "completed": true,
                "errors": Object {},
                "first_name": "Test First Name",
                "last_name": "Test Last Name",
                "line_1": "Test Address 1",
                "line_2": "Test Address 2",
                "zipcode": "Test Postcode",
              },
              "shippingAddressAsBillingAddress": true,
              "shippingMethod": Object {
                "collapsed": true,
                "completed": true,
              },
            }
          }
          order={
            Object {
              "cardTokenRequested": false,
            }
          }
          setShippingBillingAddress={[Function]}
        >
          <div>
            <div
              className="o-form__background"
            >
              <div
                className="o-form__wrapper"
              >
                <Component
                  cardTokenRequested={false}
                  checkout={
                    Object {
                      "billingAddress": Object {},
                      "paymentMethod": Object {
                        "collapsed": false,
                        "completed": false,
                        "selectedMethod": "card",
                      },
                      "shippingAddress": Object {
                        "city": "Test City",
                        "collapsed": true,
                        "completed": true,
                        "errors": Object {},
                        "first_name": "Test First Name",
                        "last_name": "Test Last Name",
                        "line_1": "Test Address 1",
                        "line_2": "Test Address 2",
                        "zipcode": "Test Postcode",
                      },
                      "shippingAddressAsBillingAddress": true,
                      "shippingMethod": Object {
                        "collapsed": true,
                        "completed": true,
                      },
                    }
                  }
                >
                  <p>
                    Mocked Card Fields
                  </p>
                </Component>
                <div
                  className="o-form__input-group"
                >
                  <label>
                    Billing address *
                  </label>
                </div>
                <n
                  checked={true}
                  label="Same as shipping address"
                  name="shippingAddressAsBillingAddress"
                  type="checkbox"
                >
                  <t
                    checked={true}
                    label="Same as shipping address"
                    name="shippingAddressAsBillingAddress"
                    renderValidationMessage={[Function]}
                    type="checkbox"
                  >
                    <div
                      className="o-form__input-group"
                    >
                      <label
                        className="o-form__label"
                        htmlFor="shippingAddressAsBillingAddress"
                      >
                        <input
                          checked={true}
                          className="o-form__checkbox"
                          id="shippingAddressAsBillingAddress"
                          name="shippingAddressAsBillingAddress"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="o-form__checkbox-caption"
                        >
                          Same as shipping address
                           
                        </span>
                      </label>
                    </div>
                  </t>
                </n>
                <div
                  aria-label="Shipping address to be used for billing"
                  className="o-payment-method__address-summary  c-payment-method__address-summary"
                >
                  <p
                    className="u-bold"
                  >
                    Test First Name Test Last Name
                  </p>
                  <p>
                    Test Address 1
                  </p>
                  <p>
                    Test Address 2
                  </p>
                  <p>
                    Test City
                  </p>
                  <p>
                    Test Postcode
                  </p>
                </div>
              </div>
            </div>
          </div>
        </StripePayment>
      </div>
    </div>
  </PaymentMethod>
</Provider>
`;

exports[`renders payment summary on collapsing 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <PaymentMethod
    cart={
      Object {
        "billing_address": Object {
          "address_line_1": "1 Queen Street",
          "city": "Leeds",
          "first_name": "Leon",
          "last_name": "The Professional",
          "postcode": "LS27EY",
        },
      }
    }
    checkout={
      Object {
        "billingAddress": Object {
          "city": "Leeds",
          "collapsed": true,
          "completed": true,
          "country_code": "GBP",
          "errors": Object {},
          "first_name": "Prasanna Gaddam",
          "label": "BILLING_LABEL",
          "last_name": "Prasanna Gaddam",
          "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
          "line_2": "Hunslet",
          "primary_phone": "07400000000",
          "state": "Yorkshire",
          "zipcode": "LS10 1QN",
        },
        "currency": "GBP",
        "currentStep": 2,
        "customer": Object {
          "email": "customer@example.com",
          "external_id": "123",
          "name": "John Doe",
        },
        "error": false,
        "lineItems": Array [
          Object {
            "currency": "GBP",
            "paid_price_inc_tax": "10",
            "quantity": 3,
            "retail_price_inc_tax": "10",
            "sku": "SK840763631-2",
            "tax_amount": 0,
            "tax_percentage": 0,
            "title": "Textured Long T Shirt",
          },
        ],
        "loading": false,
        "paid_price_inc_tax": "0105.45",
        "paymentMethod": Object {
          "collapsed": true,
          "completed": false,
          "selectedMethod": "card",
        },
        "request_uuid": 6765757657657,
        "retail_price_inc_tax": "0105.45",
        "reviewOrder": Object {
          "collapsed": true,
          "completed": false,
        },
        "shippingAddress": Object {
          "city": "Leeds",
          "collapsed": true,
          "completed": true,
          "country_code": "GBP",
          "first_name": "Prasanna Gaddam",
          "label": "BILLING_LABEL",
          "last_name": "Prasanna Gaddam",
          "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
          "line_2": "Hunslet",
          "primary_phone": "07400000000",
          "state": "Yorkshire",
          "zipcode": "LS10 1QN",
        },
        "shippingMethod": Object {
          "collapsed": false,
          "completed": true,
          "id": "2",
          "name": "UPS Next Day",
          "paid_price_inc_tax": 5.45,
          "reference": "ups_next_day",
          "retail_price_inc_tax": 5.45,
          "sku": "ups_next_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        "tax_amount": 0,
      }
    }
    order={
      Object {
        "cardErrors": false,
        "cardTokenRequested": false,
      }
    }
    setShippingBillingAddress={[Function]}
  >
    <div
      aria-label="Payment method"
      className="o-form  c-payment-method"
    >
      <div
        className="o-form__header  c-payment-method__header"
      >
        <div>
          <h2>
            Payment Method
          </h2>
        </div>
        <div>
          <t
            aria-label="Edit your payment method"
            className="o-button-edit"
            label="Edit"
            onClick={[Function]}
            status="secondary"
          >
            <button
              aria-label="Edit your payment method"
              className="o-button-edit o-button o-button--secondary"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
            >
              Edit
            </button>
          </t>
        </div>
      </div>
      <div
        className="c-payment-method__summary o-form__error"
      >
        <p>
          <span
            className="u-bold"
          >
             Payment Mode: 
          </span>
          <span>
             
            Credit/Debit Card
             
          </span>
        </p>
        <p>
          <span
            className="u-bold"
          >
            Billing Address: 
          </span>
          <span
            className="u-bold"
          >
            Leon
             
            The Professional
             
          </span>
          <span>
            1 Queen Street
            , 
            Leeds
            , 
            LS27EY
          </span>
        </p>
      </div>
      <div
        className="c-payment-method__section"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <PaymentMethodSelector
          currentMethod="card"
        >
          <div
            className="o-form c-payment-method"
          >
            <div
              className="c-payment-method__button-group"
            >
              <t
                aria-label="Use credit or debit card"
                className="c-payment-method__button c-payment-method__button--active"
                label="Credit/Debit Card"
                onClick={[Function]}
              >
                <button
                  aria-label="Use credit or debit card"
                  className="c-payment-method__button c-payment-method__button--active o-button"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  Credit/Debit Card
                </button>
              </t>
              <t
                aria-label="Use paypal"
                className="c-payment-method__button "
                label="PayPal"
                onClick={[Function]}
              >
                <button
                  aria-label="Use paypal"
                  className="c-payment-method__button  o-button"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  PayPal
                </button>
              </t>
            </div>
            <div
              className="c-payment-method__images"
            >
              <span
                className="c-payment-method__images-cardpayment"
              >
                <t
                  src="/static/payments/visa.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/visa.svg"
                        srcSet="/static/payments/visa.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/mastercard.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/mastercard.svg"
                        srcSet="/static/payments/mastercard.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/american-express.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/american-express.svg"
                        srcSet="/static/payments/american-express.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
                <t
                  src="/static/payments/maestro.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/maestro.svg"
                        srcSet="/static/payments/maestro.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
              </span>
              <span
                className="c-payment-method__images-paypal"
              >
                <t
                  src="/static/payments/pay-pal.svg"
                >
                  <div>
                    <picture>
                      <img
                        className="o-image"
                        src="/static/payments/pay-pal.svg"
                        srcSet="/static/payments/pay-pal.svg 769w"
                      />
                    </picture>
                  </div>
                </t>
              </span>
            </div>
          </div>
        </PaymentMethodSelector>
        <StripePayment
          cart={
            Object {
              "billing_address": Object {
                "address_line_1": "1 Queen Street",
                "city": "Leeds",
                "first_name": "Leon",
                "last_name": "The Professional",
                "postcode": "LS27EY",
              },
            }
          }
          checkout={
            Object {
              "billingAddress": Object {
                "city": "Leeds",
                "collapsed": true,
                "completed": true,
                "country_code": "GBP",
                "errors": Object {},
                "first_name": "Prasanna Gaddam",
                "label": "BILLING_LABEL",
                "last_name": "Prasanna Gaddam",
                "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                "line_2": "Hunslet",
                "primary_phone": "07400000000",
                "state": "Yorkshire",
                "zipcode": "LS10 1QN",
              },
              "currency": "GBP",
              "currentStep": 2,
              "customer": Object {
                "email": "customer@example.com",
                "external_id": "123",
                "name": "John Doe",
              },
              "error": false,
              "lineItems": Array [
                Object {
                  "currency": "GBP",
                  "paid_price_inc_tax": "10",
                  "quantity": 3,
                  "retail_price_inc_tax": "10",
                  "sku": "SK840763631-2",
                  "tax_amount": 0,
                  "tax_percentage": 0,
                  "title": "Textured Long T Shirt",
                },
              ],
              "loading": false,
              "paid_price_inc_tax": "0105.45",
              "paymentMethod": Object {
                "collapsed": true,
                "completed": false,
                "selectedMethod": "card",
              },
              "request_uuid": 6765757657657,
              "retail_price_inc_tax": "0105.45",
              "reviewOrder": Object {
                "collapsed": true,
                "completed": false,
              },
              "shippingAddress": Object {
                "city": "Leeds",
                "collapsed": true,
                "completed": true,
                "country_code": "GBP",
                "first_name": "Prasanna Gaddam",
                "label": "BILLING_LABEL",
                "last_name": "Prasanna Gaddam",
                "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                "line_2": "Hunslet",
                "primary_phone": "07400000000",
                "state": "Yorkshire",
                "zipcode": "LS10 1QN",
              },
              "shippingMethod": Object {
                "collapsed": false,
                "completed": true,
                "id": "2",
                "name": "UPS Next Day",
                "paid_price_inc_tax": 5.45,
                "reference": "ups_next_day",
                "retail_price_inc_tax": 5.45,
                "sku": "ups_next_day",
                "tax_amount": 2,
                "tax_percentage": 20,
              },
              "tax_amount": 0,
            }
          }
          order={
            Object {
              "cardErrors": false,
              "cardTokenRequested": false,
            }
          }
          setShippingBillingAddress={[Function]}
        >
          <div>
            <div
              className="o-form__background"
            >
              <div
                className="o-form__wrapper"
              >
                <Component
                  cardTokenRequested={false}
                  checkout={
                    Object {
                      "billingAddress": Object {
                        "city": "Leeds",
                        "collapsed": true,
                        "completed": true,
                        "country_code": "GBP",
                        "errors": Object {},
                        "first_name": "Prasanna Gaddam",
                        "label": "BILLING_LABEL",
                        "last_name": "Prasanna Gaddam",
                        "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                        "line_2": "Hunslet",
                        "primary_phone": "07400000000",
                        "state": "Yorkshire",
                        "zipcode": "LS10 1QN",
                      },
                      "currency": "GBP",
                      "currentStep": 2,
                      "customer": Object {
                        "email": "customer@example.com",
                        "external_id": "123",
                        "name": "John Doe",
                      },
                      "error": false,
                      "lineItems": Array [
                        Object {
                          "currency": "GBP",
                          "paid_price_inc_tax": "10",
                          "quantity": 3,
                          "retail_price_inc_tax": "10",
                          "sku": "SK840763631-2",
                          "tax_amount": 0,
                          "tax_percentage": 0,
                          "title": "Textured Long T Shirt",
                        },
                      ],
                      "loading": false,
                      "paid_price_inc_tax": "0105.45",
                      "paymentMethod": Object {
                        "collapsed": true,
                        "completed": false,
                        "selectedMethod": "card",
                      },
                      "request_uuid": 6765757657657,
                      "retail_price_inc_tax": "0105.45",
                      "reviewOrder": Object {
                        "collapsed": true,
                        "completed": false,
                      },
                      "shippingAddress": Object {
                        "city": "Leeds",
                        "collapsed": true,
                        "completed": true,
                        "country_code": "GBP",
                        "first_name": "Prasanna Gaddam",
                        "label": "BILLING_LABEL",
                        "last_name": "Prasanna Gaddam",
                        "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                        "line_2": "Hunslet",
                        "primary_phone": "07400000000",
                        "state": "Yorkshire",
                        "zipcode": "LS10 1QN",
                      },
                      "shippingMethod": Object {
                        "collapsed": false,
                        "completed": true,
                        "id": "2",
                        "name": "UPS Next Day",
                        "paid_price_inc_tax": 5.45,
                        "reference": "ups_next_day",
                        "retail_price_inc_tax": 5.45,
                        "sku": "ups_next_day",
                        "tax_amount": 2,
                        "tax_percentage": 20,
                      },
                      "tax_amount": 0,
                    }
                  }
                >
                  <p>
                    Mocked Card Fields
                  </p>
                </Component>
                <div
                  className="o-form__input-group"
                >
                  <label>
                    Billing address *
                  </label>
                </div>
                <n
                  checked={false}
                  label="Same as shipping address"
                  name="shippingAddressAsBillingAddress"
                  type="checkbox"
                >
                  <t
                    checked={false}
                    label="Same as shipping address"
                    name="shippingAddressAsBillingAddress"
                    renderValidationMessage={[Function]}
                    type="checkbox"
                  >
                    <div
                      className="o-form__input-group"
                    >
                      <label
                        className="o-form__label"
                        htmlFor="shippingAddressAsBillingAddress"
                      >
                        <input
                          checked={false}
                          className="o-form__checkbox"
                          id="shippingAddressAsBillingAddress"
                          name="shippingAddressAsBillingAddress"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="o-form__checkbox-caption"
                        >
                          Same as shipping address
                           
                        </span>
                      </label>
                    </div>
                  </t>
                </n>
              </div>
            </div>
            <Connect(AddressForm)
              addressType="billing"
              aria-label="Billing address form"
              checkout={
                Object {
                  "billingAddress": Object {
                    "city": "Leeds",
                    "collapsed": true,
                    "completed": true,
                    "country_code": "GBP",
                    "errors": Object {},
                    "first_name": "Prasanna Gaddam",
                    "label": "BILLING_LABEL",
                    "last_name": "Prasanna Gaddam",
                    "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                    "line_2": "Hunslet",
                    "primary_phone": "07400000000",
                    "state": "Yorkshire",
                    "zipcode": "LS10 1QN",
                  },
                  "currency": "GBP",
                  "currentStep": 2,
                  "customer": Object {
                    "email": "customer@example.com",
                    "external_id": "123",
                    "name": "John Doe",
                  },
                  "error": false,
                  "lineItems": Array [
                    Object {
                      "currency": "GBP",
                      "paid_price_inc_tax": "10",
                      "quantity": 3,
                      "retail_price_inc_tax": "10",
                      "sku": "SK840763631-2",
                      "tax_amount": 0,
                      "tax_percentage": 0,
                      "title": "Textured Long T Shirt",
                    },
                  ],
                  "loading": false,
                  "paid_price_inc_tax": "0105.45",
                  "paymentMethod": Object {
                    "collapsed": true,
                    "completed": false,
                    "selectedMethod": "card",
                  },
                  "request_uuid": 6765757657657,
                  "retail_price_inc_tax": "0105.45",
                  "reviewOrder": Object {
                    "collapsed": true,
                    "completed": false,
                  },
                  "shippingAddress": Object {
                    "city": "Leeds",
                    "collapsed": true,
                    "completed": true,
                    "country_code": "GBP",
                    "first_name": "Prasanna Gaddam",
                    "label": "BILLING_LABEL",
                    "last_name": "Prasanna Gaddam",
                    "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                    "line_2": "Hunslet",
                    "primary_phone": "07400000000",
                    "state": "Yorkshire",
                    "zipcode": "LS10 1QN",
                  },
                  "shippingMethod": Object {
                    "collapsed": false,
                    "completed": true,
                    "id": "2",
                    "name": "UPS Next Day",
                    "paid_price_inc_tax": 5.45,
                    "reference": "ups_next_day",
                    "retail_price_inc_tax": 5.45,
                    "sku": "ups_next_day",
                    "tax_amount": 2,
                    "tax_percentage": 20,
                  },
                  "tax_amount": 0,
                }
              }
              className="o-form__billing"
              formName="billingAddress"
              title="Billing Address"
            >
              <AddressForm
                addressBook={Array []}
                addressType="billing"
                aria-label="Billing address form"
                checkout={
                  Object {
                    "billingAddress": Object {
                      "city": "Leeds",
                      "collapsed": true,
                      "completed": true,
                      "country_code": "GBP",
                      "errors": Object {},
                      "first_name": "Prasanna Gaddam",
                      "label": "BILLING_LABEL",
                      "last_name": "Prasanna Gaddam",
                      "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                      "line_2": "Hunslet",
                      "primary_phone": "07400000000",
                      "state": "Yorkshire",
                      "zipcode": "LS10 1QN",
                    },
                    "currency": "GBP",
                    "currentStep": 2,
                    "customer": Object {
                      "email": "customer@example.com",
                      "external_id": "123",
                      "name": "John Doe",
                    },
                    "error": false,
                    "lineItems": Array [
                      Object {
                        "currency": "GBP",
                        "paid_price_inc_tax": "10",
                        "quantity": 3,
                        "retail_price_inc_tax": "10",
                        "sku": "SK840763631-2",
                        "tax_amount": 0,
                        "tax_percentage": 0,
                        "title": "Textured Long T Shirt",
                      },
                    ],
                    "loading": false,
                    "paid_price_inc_tax": "0105.45",
                    "paymentMethod": Object {
                      "collapsed": true,
                      "completed": false,
                      "selectedMethod": "card",
                    },
                    "request_uuid": 6765757657657,
                    "retail_price_inc_tax": "0105.45",
                    "reviewOrder": Object {
                      "collapsed": true,
                      "completed": false,
                    },
                    "shippingAddress": Object {
                      "city": "Leeds",
                      "collapsed": true,
                      "completed": true,
                      "country_code": "GBP",
                      "first_name": "Prasanna Gaddam",
                      "label": "BILLING_LABEL",
                      "last_name": "Prasanna Gaddam",
                      "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                      "line_2": "Hunslet",
                      "primary_phone": "07400000000",
                      "state": "Yorkshire",
                      "zipcode": "LS10 1QN",
                    },
                    "shippingMethod": Object {
                      "collapsed": false,
                      "completed": true,
                      "id": "2",
                      "name": "UPS Next Day",
                      "paid_price_inc_tax": 5.45,
                      "reference": "ups_next_day",
                      "retail_price_inc_tax": 5.45,
                      "sku": "ups_next_day",
                      "tax_amount": 2,
                      "tax_percentage": 20,
                    },
                    "tax_amount": 0,
                  }
                }
                className="o-form__billing"
                dispatch={[Function]}
                formName="billingAddress"
                loggedIn={false}
                title="Billing Address"
              >
                <div
                  className="o-form__address o-form__billing"
                >
                  <div
                    className="o-form__header c-address-form__header"
                  >
                    <div
                      className="o-form__header-title c-address-form__header-title"
                    >
                      <h2>
                        Billing Address
                      </h2>
                    </div>
                    <t
                      className="o-button-edit"
                      label="Edit"
                      onClick={[Function]}
                      status="secondary"
                    >
                      <button
                        className="o-button-edit o-button o-button--secondary"
                        disabled={false}
                        onClick={[Function]}
                        role="button"
                        tabIndex="0"
                      >
                        Edit
                      </button>
                    </t>
                  </div>
                </div>
              </AddressForm>
            </Connect(AddressForm)>
          </div>
        </StripePayment>
      </div>
    </div>
  </PaymentMethod>
</Provider>
`;
